added chromosome alias

--- a/Bowtie.ipynb
+++ b/Bowtie.ipynb
@@ -2434,6 +2434,37 @@
   },
   {
    "cell_type": "markdown",
+   "id": "83b0247c-60a3-45b9-826b-9371efc88b38",
+   "metadata": {},
+   "source": [
+    "# Make alias to translate chromosome format \n",
+    "To use in featureCounts with the command chrAliases. \"The file should be a comma delimited text file that includes two columns. The first column gives the chromosome names used in the annotation and the second column gives the chromosome names used by reads. This file should not contain header lines. Names included in this file are case sensitive.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0564da1e-757d-49d4-adda-c028ce9695fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "mkdir data/featureCounts_alias\n",
+    "# extract the first part of the space separated cromosome descriptor\n",
+    "grep \">\" data/Homo_sapiens.GRCh38.cdna.all.fa | cut -d \" \" -f3 | cut -d \":\" -f4 > data/featureCounts_alias/alias_row1.txt\n",
+    "# extract the second part of the space separated chromosome descriptor\n",
+    "grep \">\" data/Homo_sapiens.GRCh38.cdna.all.fa | cut -d \" \" -f3 | cut -d \":\" -f5 > data/featureCounts_alias/alias_row2.txt\n",
+    "# extract the original ensembl chromosome description\n",
+    "grep \">\" data/Homo_sapiens.GRCh38.cdna.all.fa | cut -d \" \" -f3 > data/featureCounts_alias/alias_row3.txt\n",
+    "\n",
+    "paste -d \" ,\" \\\n",
+    "data/featureCounts_alias/alias_row1.txt \\\n",
+    "data/featureCounts_alias/alias_row2.txt \\\n",
+    "data/featureCounts_alias/alias_row3.txt > data/featureCounts_alias/featureCounts_alias.csv\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af188c54-f62d-4454-9589-919c77e31b74",
    "metadata": {},
    "source": [
@@ -4175,7 +4206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "00601606-a344-41ff-8aa9-fe32d8145935",
    "metadata": {},
    "outputs": [
@@ -4266,7 +4297,11 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%%bash\n",
+    "grep \">\" Homo_sapiens.GRCh38.cdna.all.fa | cut -d \" \" -f3a | cut -d \":\" -f4 | uniq -c\n",
+    "grep \">\" Homo_sapiens.GRCh38.cdna.all.fa | cut -d \" \" -f3 | cut -d \":\" -f5 | uniq -c"
+   ]
   },
   {
    "cell_type": "code",
