added fdr correction

--- a/DESeq2_STAR.ipynb
+++ b/DESeq2_STAR.ipynb
@@ -1021,196 +1021,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "id": "93e9bb9a-0517-4232-bf67-c7ace7d40f8b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>baseMean</th>\n",
-       "      <th>log2FoldChange</th>\n",
-       "      <th>lfcSE</th>\n",
-       "      <th>stat</th>\n",
-       "      <th>pvalue</th>\n",
-       "      <th>padj</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>62320</th>\n",
-       "      <td>ENSG00000163735</td>\n",
-       "      <td>123.902293</td>\n",
-       "      <td>-7.465867</td>\n",
-       "      <td>0.888871</td>\n",
-       "      <td>-8.399267</td>\n",
-       "      <td>4.492747e-17</td>\n",
-       "      <td>6.590410e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>53956</th>\n",
-       "      <td>ENSG00000211897</td>\n",
-       "      <td>2344.407879</td>\n",
-       "      <td>-4.478580</td>\n",
-       "      <td>0.531624</td>\n",
-       "      <td>-8.424334</td>\n",
-       "      <td>3.628069e-17</td>\n",
-       "      <td>6.590410e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38348</th>\n",
-       "      <td>ENSG00000211893</td>\n",
-       "      <td>2147.097202</td>\n",
-       "      <td>-4.209961</td>\n",
-       "      <td>0.515895</td>\n",
-       "      <td>-8.160507</td>\n",
-       "      <td>3.336225e-16</td>\n",
-       "      <td>3.262606e-12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11211</th>\n",
-       "      <td>ENSG00000145113</td>\n",
-       "      <td>766.820801</td>\n",
-       "      <td>-5.530088</td>\n",
-       "      <td>0.706498</td>\n",
-       "      <td>-7.827464</td>\n",
-       "      <td>4.978102e-15</td>\n",
-       "      <td>3.651189e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>565</th>\n",
-       "      <td>ENSG00000269404</td>\n",
-       "      <td>65.987284</td>\n",
-       "      <td>-5.324327</td>\n",
-       "      <td>0.686340</td>\n",
-       "      <td>-7.757569</td>\n",
-       "      <td>8.657260e-15</td>\n",
-       "      <td>5.079734e-11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>44565</th>\n",
-       "      <td>ENSG00000198894</td>\n",
-       "      <td>203.482200</td>\n",
-       "      <td>0.402649</td>\n",
-       "      <td>0.137751</td>\n",
-       "      <td>2.923010</td>\n",
-       "      <td>3.466658e-03</td>\n",
-       "      <td>4.937126e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34318</th>\n",
-       "      <td>ENSG00000175449</td>\n",
-       "      <td>18.735403</td>\n",
-       "      <td>1.000771</td>\n",
-       "      <td>0.342404</td>\n",
-       "      <td>2.922780</td>\n",
-       "      <td>3.469218e-03</td>\n",
-       "      <td>4.938375e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35466</th>\n",
-       "      <td>ENSG00000254777</td>\n",
-       "      <td>26.416927</td>\n",
-       "      <td>-1.349131</td>\n",
-       "      <td>0.461829</td>\n",
-       "      <td>-2.921280</td>\n",
-       "      <td>3.485967e-03</td>\n",
-       "      <td>4.959811e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>75771</th>\n",
-       "      <td>ENSG00000007933</td>\n",
-       "      <td>68.438163</td>\n",
-       "      <td>-1.241131</td>\n",
-       "      <td>0.424991</td>\n",
-       "      <td>-2.920371</td>\n",
-       "      <td>3.496148e-03</td>\n",
-       "      <td>4.971884e-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37991</th>\n",
-       "      <td>ENSG00000247516</td>\n",
-       "      <td>144.270115</td>\n",
-       "      <td>0.801186</td>\n",
-       "      <td>0.274420</td>\n",
-       "      <td>2.919557</td>\n",
-       "      <td>3.505298e-03</td>\n",
-       "      <td>4.982483e-02</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2064 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Unnamed: 0     baseMean  log2FoldChange     lfcSE      stat  \\\n",
-       "62320  ENSG00000163735   123.902293       -7.465867  0.888871 -8.399267   \n",
-       "53956  ENSG00000211897  2344.407879       -4.478580  0.531624 -8.424334   \n",
-       "38348  ENSG00000211893  2147.097202       -4.209961  0.515895 -8.160507   \n",
-       "11211  ENSG00000145113   766.820801       -5.530088  0.706498 -7.827464   \n",
-       "565    ENSG00000269404    65.987284       -5.324327  0.686340 -7.757569   \n",
-       "...                ...          ...             ...       ...       ...   \n",
-       "44565  ENSG00000198894   203.482200        0.402649  0.137751  2.923010   \n",
-       "34318  ENSG00000175449    18.735403        1.000771  0.342404  2.922780   \n",
-       "35466  ENSG00000254777    26.416927       -1.349131  0.461829 -2.921280   \n",
-       "75771  ENSG00000007933    68.438163       -1.241131  0.424991 -2.920371   \n",
-       "37991  ENSG00000247516   144.270115        0.801186  0.274420  2.919557   \n",
-       "\n",
-       "             pvalue          padj  \n",
-       "62320  4.492747e-17  6.590410e-13  \n",
-       "53956  3.628069e-17  6.590410e-13  \n",
-       "38348  3.336225e-16  3.262606e-12  \n",
-       "11211  4.978102e-15  3.651189e-11  \n",
-       "565    8.657260e-15  5.079734e-11  \n",
-       "...             ...           ...  \n",
-       "44565  3.466658e-03  4.937126e-02  \n",
-       "34318  3.469218e-03  4.938375e-02  \n",
-       "35466  3.485967e-03  4.959811e-02  \n",
-       "75771  3.496148e-03  4.971884e-02  \n",
-       "37991  3.505298e-03  4.982483e-02  \n",
-       "\n",
-       "[2064 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            Unnamed: 0     baseMean  log2FoldChange     lfcSE      stat  \\\n",
+      "53956  ENSG00000211897  2344.407879       -4.478580  0.531624 -8.424334   \n",
+      "62320  ENSG00000163735   123.902293       -7.465867  0.888871 -8.399267   \n",
+      "38348  ENSG00000211893  2147.097202       -4.209961  0.515895 -8.160507   \n",
+      "11211  ENSG00000145113   766.820801       -5.530088  0.706498 -7.827464   \n",
+      "565    ENSG00000269404    65.987284       -5.324327  0.686340 -7.757569   \n",
+      "...                ...          ...             ...       ...       ...   \n",
+      "44565  ENSG00000198894   203.482200        0.402649  0.137751  2.923010   \n",
+      "34318  ENSG00000175449    18.735403        1.000771  0.342404  2.922780   \n",
+      "35466  ENSG00000254777    26.416927       -1.349131  0.461829 -2.921280   \n",
+      "75771  ENSG00000007933    68.438163       -1.241131  0.424991 -2.920371   \n",
+      "37991  ENSG00000247516   144.270115        0.801186  0.274420  2.919557   \n",
+      "\n",
+      "             pvalue          padj  FDR_corrected_padj  Significant  \n",
+      "53956  3.628069e-17  6.590410e-13        9.667473e-09         True  \n",
+      "62320  4.492747e-17  6.590410e-13        9.667473e-09         True  \n",
+      "38348  3.336225e-16  3.262606e-12        3.190611e-08         True  \n",
+      "11211  4.978102e-15  3.651189e-11        2.677965e-07         True  \n",
+      "565    8.657260e-15  5.079734e-11        2.980585e-07         True  \n",
+      "...             ...           ...                 ...          ...  \n",
+      "44565  3.466658e-03  4.937126e-02        7.029696e-01        False  \n",
+      "34318  3.469218e-03  4.938375e-02        7.029696e-01        False  \n",
+      "35466  3.485967e-03  4.959811e-02        7.056786e-01        False  \n",
+      "75771  3.496148e-03  4.971884e-02        7.070535e-01        False  \n",
+      "37991  3.505298e-03  4.982483e-02        7.082174e-01        False  \n",
+      "\n",
+      "[2064 rows x 9 columns]\n",
+      "420\n"
+     ]
     }
    ],
    "source": [
     "import pandas as pd\n",
+    "import statsmodels.stats.multitest as smm\n",
     "DESeq2_STAR_results = pd.read_csv(\"STAR.DESeq2_results.csv\") \n",
-    "DESeq2_STAR_filtered_results = DESeq2_STAR_results.sort_values(\"padj\", ascending=True) \n",
-    "DESeq2_STAR_filtered_results.loc[DESeq2_STAR_filtered_results[\"padj\"]<=0.05]"
+    "\n",
+    "DESeq2_STAR_results = DESeq2_STAR_results.dropna(subset=[\"padj\"]) #drop all NAN in padj column\n",
+    "significant, corrected_pvals = smm.fdrcorrection(DESeq2_STAR_results[\"padj\"], alpha=0.05, method='indep', is_sorted=False)\n",
+    "DESeq2_STAR_results[\"FDR_corrected_padj\"] = corrected_pvals\n",
+    "DESeq2_STAR_results[\"Significant\"] = significant \n",
+    "\n",
+    "DESeq2_STAR_filtered_results = DESeq2_STAR_results.sort_values(\"FDR_corrected_padj\", ascending=True) \n",
+    "print(DESeq2_STAR_filtered_results.loc[DESeq2_STAR_filtered_results[\"padj\"]<=0.05])\n",
+    "print(len(DESeq2_STAR_filtered_results[DESeq2_STAR_filtered_results[\"Significant\"]==True]))"
    ]
   },
   {
